data/all_generated_tests/raw_wast_tests/loop_EdgeCaseFailuresinbr_table_1157.wast
;; 8. **Test Description**:    - Design a program where `br_table` within a `loop` randomizes the index, sometimes selecting out-of-bounds values.    - **Constraint**: Ensures implementations handle random and unpredictable branching errors gracefully.    - **Edge Case**: Validates stability under non-deterministic conditions leading to out-of-bounds branches.

(assert_invalid
  (module
    (func $br_table_out_of_bounds
      (loop $label (result i32)
        (i32.const 10)  ;; Push constant to stack
        (br_table $label  ;; Randomize branch, could be out-of-bounds
          (i32.const 0) (i32.const 1) (i32.const 2) 
          (i32.const 3) (i32.const 4) (i32.const 5) 
          (i32.const 6) (i32.const 7) (i32.const 8) 
          (i32.const 9) (i32.const 10)
        )
      )
    )
  )
  "index out of bounds"
)